upgrade to Neo4j 4.2.0 and XO 1.2.0-SNAPSHOT